# modeye

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
shaders/: triangle.frag  triangle.vert
src/: Application.cpp  Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.h  Camera.hpp  Log.cpp  Log.hpp  Main.cpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  Timer.cpp  Timer.hpp  Vertex.hpp
src/Core/: GL.hpp  Gfx.hpp  Log.cpp  Log.hpp  Timer.cpp  Timer.hpp
src/Core/Gfx/: Camera.cpp  Camera.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  Window.cpp  Window.hpp
src/core/: gfx.hpp  log.cpp  log.hpp  timer.cpp  timer.hpp
src/core/gfx/: VertexArray.cpp  VertexArray.hpp  VertexBuffer.hpp  camera.cpp  camera.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  vertex.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
